App: fix gap in bottom of image border

--- a/xaver-app/src/app/modules/components/game_element.scss
+++ b/xaver-app/src/app/modules/components/game_element.scss
@@ -55,6 +55,9 @@
 .game_element_image {
   float: left;
 }
+.game_element_image img {
+  display:block;
+}
 
 .game_element_text {
   float: left;
